--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.13.2",
     "element-plus": "^2.11.8",
     "pinia": "^3.0.4",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
